--- a/web/app/index.html
+++ b/web/app/index.html
@@ -68,9 +68,9 @@
         </div>
 
         <div class="mdui-textfield mdui-textfield-floating-label">
-            <label class="mdui-textfield-label" id="cover">封面图片</label>
-            <textarea
-                class="mdui-textfield-input">https://i0.hdslb.com/bfs/archive/34fba8c3c62cfc6cc8bc473b5b8e3ff83e737580.jpg</textarea>
+            <label class="mdui-textfield-label">封面图片</label>
+            <textarea class="mdui-textfield-input"
+                id="cover">https://i0.hdslb.com/bfs/archive/34fba8c3c62cfc6cc8bc473b5b8e3ff83e737580.jpg</textarea>
         </div>
 
         <button class="mdui-btn mdui-btn-block mdui-color-pink mdui-ripple mdui-hoverable mdui-center mdui-m-y-1"
