--- a/web/app/index.html
+++ b/web/app/index.html
@@ -70,7 +70,7 @@
         <div class="mdui-textfield mdui-textfield-floating-label">
             <label class="mdui-textfield-label">封面图片</label>
             <textarea class="mdui-textfield-input"
-                id="cover">https://i0.hdslb.com/bfs/archive/34fba8c3c62cfc6cc8bc473b5b8e3ff83e737580.jpg</textarea>
+                id="cover">https://i0.hdslb.com/bfs/archive/34fba8c3c62cfc6cc8bc473b5b8e3ff83e737580.jpg@672w_378h_1c_100q.webp</textarea>
         </div>
 
         <button class="mdui-btn mdui-btn-block mdui-color-pink mdui-ripple mdui-hoverable mdui-center mdui-m-y-1"
